# cpp_chess

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cppchess.cpp  cppchess.h
.github/workflows/: c-cpp.yml  cmake.yml
chess/: BoardEvaluator.cpp  BoardEvaluator.h  Game.cpp  Game.h  Interfaces.h  Textures.cpp  Textures.h  cppchess.cpp  cppchess.h
cppchess/: CMakeLists.txt
cppchess/controller/: BoardController.cpp  BoardController.h  DadsMoveTikrintojas.cpp  DadsMoveTikrintojas.h  DadsMoveTikrintrojas.h  GameController.cpp  GameController.h  MoveController.cpp  MoveController.h  MoveTikrintojas.h  StandardMoveTikrintojas.cpp  StandardMoveTikrintojas.h
cppchess/model/: AllPiecesInclude.h  Bishop.h  Board.h  Castle.h  Enums.h  Game.h  Horse.h  King.h  Move.h  Pawn.h  Piece.h  Player.h  Point.h  Queen.h
cppchess/utils/: FilterableList.h  MapHelper.h  VectorHelper.h
cppchessengine/: CMakeLists.txt
cppchessengine/controller/: BoardController.cpp  BoardController.h  DadsMoveTikrintojas.cpp  DadsMoveTikrintojas.h  GameController.cpp  GameController.h  MoveController.cpp  MoveController.h  MoveTikrintojas.h  StandardMoveTikrintojas.cpp  StandardMoveTikrintojas.h
cppchessengine/model/: Bishop.h  Board.h  Castle.h  Enums.h  Game.h  Horse.h  King.h  Move.h  Pawn.h  Piece.h  Player.h  Point.h  Queen.h
cppchessengine/utils/: VectorHelper.h
libs/: CMakeLists.txt
libs/sfml/: CMakeLists.txt
tests/: CMakeLists.txt  TestBoard.cpp  TestBoardController.cpp  TestGame.cpp  TestMoveController.cpp  TestStandardMoveTikrintojas.cpp
tests/Chess/: CMakeLists.txt  TestBoardEvaluator.cpp
tests/ChessEngine/: CMakeLists.txt  TestBoard.cpp  TestBoardController.cpp  TestGame.cpp  TestMoveController.cpp  TestStandardMoveTikrintojas.cpp
